# netssh-rs

./: .augmentignore  .cursorrules  .gitignore  Cargo.toml  IMPLEMENTATION_STATUS.md  Makefile  README.md  config.toml  example.db  parse_example.py  pyproject.toml  setup.py  simple_test.py  test.py  test_intellisense.py  test_parse.py
.cargo/: config.toml
config/: log4rs.yaml
crates/netssh-api/: Cargo.toml
crates/netssh-api/src/: lib.rs  main.rs
crates/netssh-api/src/api/: controllers.rs
crates/netssh-core/: Cargo.toml  README.md  settings.json
crates/netssh-core/examples/: test_textfsm_integration.rs
crates/netssh-core/src/: autodetect.rs  base_connection.rs  buffer_pool.rs  channel.rs  command_result.rs  config.rs  device_connection.rs  device_connection_impl.rs  device_factory.rs  device_service.rs  error.rs  lib.rs  logging.rs  parallel_execution.rs  semaphore.rs  session_log.rs  settings.rs  vendor_error_patterns.rs
crates/netssh-core/src/vendors/: mod.rs
crates/netssh-core/src/vendors/cisco/: asa.rs  asa_network_device.rs  ciscodevicebase.rs  ios.rs  ios_network_device.rs  mod.rs  nxos.rs  nxos_network_device.rs  xr.rs  xr_network_device.rs
crates/netssh-core/src/vendors/common/: mod.rs
crates/netssh-core/src/vendors/juniper/: juniperdevicebase.rs  junos.rs  junos_network_device.rs  mod.rs
crates/netssh-core/tests/: README.md  buffer_pool_test.rs  integration_test.rs  lib.rs  mock_device.rs  parallel_execution_tests.rs  semaphore_test.rs  settings_test.rs  test_organization.rs
crates/netssh-core/tests/common/: integration_test.rs  mod.rs
crates/netssh-core/tests/utils/: buffer_pool_test.rs  mock_device.rs  mod.rs  private_key.pem  public_key.pem  semaphore_test.rs  settings_test.rs  test_helpers.rs
crates/netssh-core/tests/vendors/: common_tests.rs  example_vendor_test.rs  mod.rs
crates/netssh-core/tests/vendors/cisco/: mod.rs  nxos_specific_tests.rs  nxos_tests.rs
crates/netssh-python/: Cargo.toml  MANIFEST.in  README.md  example_parse_show_version.py  netssh_parser.py  netssh_parser.pyi  netssh_rs.pyi  parse_example.py  pyproject.toml  setup.py  test_textfsm_integration.py  textfsm_example_readme.md
crates/netssh-python/netssh_rs/: __init__.py  __init__.pyi  py.typed
crates/netssh-python/netssh_rs/stubs/: __init__.py  netssh_rs.pyi
crates/netssh-python/python/: README.md  __init__.py  example.py  netssh_rs.pyi  netssh_rs_parse.py  netssh_rs_parse.pyi  parallel_example.py  py.typed  requirements.txt  setup.py  test_netssh_rs.py  textfsm_example.py
crates/netssh-python/python/netssh_rs/: __init__.py  __init__.pyi
crates/netssh-python/python/netssh_rs/stubs/: __init__.py  netssh_rs.pyi
crates/netssh-python/python/netssh_rs/textfsm/: __init__.py  __init__.pyi  parse_output.py
crates/netssh-python/src/: lib.rs
crates/netssh-python/textfsm/: __init__.py  parse.py  parse.pyi  parse_output.py  test_template.py
crates/netssh-textfsm/: .gitignore  Cargo.toml  README.md  rust_parsed_data.json
crates/netssh-textfsm/src/: config.rs  lib.rs  main.rs  parse_output.rs
crates/netssh-textfsm/src/textfsm/: errors.rs  fsm.rs  mod.rs  options.rs  rule.rs  value.rs
crates/netssh-textfsm/tests/: integration_tests.rs
crates/scheduler/: .gitignore  Cargo.toml  DEMO.md  demo.sh  immediate_job.json  onetime_job_3min.json  recurring_job_3min.json
crates/scheduler/examples/: logging_demo.rs  phase1_connection_reuse.rs
crates/scheduler/migrations/: 001_initial.sql  002_add_next_run_at.sql
crates/scheduler/src/: error.rs  lib.rs  logging.rs  main.rs
crates/scheduler/src/api/: handlers.rs  mod.rs  routes.rs
crates/scheduler/src/board/: mod.rs
crates/scheduler/src/config/: mod.rs
crates/scheduler/src/jobs/: mod.rs  ssh_job.rs  types.rs  worker_state.rs
crates/scheduler/src/scheduler/: cron_scheduler.rs  job_scheduler.rs  mod.rs
crates/scheduler/src/storage/: mod.rs  sqlite.rs  traits.rs
crates/scheduler/static/: board.html
crates/scheduler/tests/: logging_test.rs
crates/shared-config/: Cargo.toml
crates/shared-config/examples/: cross_crate_integration_demo.rs  unified_config_demo.rs
crates/shared-config/src/: lib.rs
docs/: architecture_colored.md  netssh-rs-implementation-plan.md
docs/archive/: completed_tasks.md
docs/netssh-core/: README.md
docs/netssh-python/: README.md
docs/project/: productContext.md  progress.md  techContext.md  workspace_reorganization.md
docs/scheduler/: ARCHITECTURE.html  ARCHITECTURE.md  LOGGING.md  README.md  ssh_connection_scaling_architecture.md
docs/shared-config/: unified_configuration_migration.md
examples/: all_devices_example.rs  basic_connection.rs  cisco_asa.rs  cisco_devices.rs  cisco_devices_r1.rs  cisco_nxos.rs  cisco_xr.rs  command_result_example.py  juniper_junos.rs  network_device_asa.rs  network_device_example.rs  network_device_ios.rs  network_device_nxos.rs  network_device_xr.rs  rest_api_example.rs  test_logging.rs
examples/netssh-core/: BUILDER_PATTERN_GUIDE.md  basic_connection.rs  device_info.rs  env_config.rs  error_handling.rs  multiple_commands.rs  parsing_example.rs
examples/python/: INTEGRATION.md  README.md  __init__.py  backend_integration_example.py  example.py  requirements.txt  test_netssh_rs.py
examples/scheduler/: basic_usage.rs  with_board.rs
examples/shared-config/: unified_config_demo.rs
memory-bank/: activeContext.md  netssh_settings_migration.md  projectbrief.md  systemPatterns.md  tasks.md
memory_bank/: thread_safety_migration_notes.md
src/: base_connection.rs  channel.rs  config.rs  connection_manager.rs  device_connection.rs  device_connection_impl.rs  device_factory.rs  error.rs  lib.rs  logging.rs  main.rs  python.rs  rest_api.rs  session_log.rs  ssh_dispatcher.rs
src/api/: mod.rs  models.rs  routes.rs
src/vendors/: mod.rs
src/vendors/cisco/: asa.rs  asa_network_device.rs  ciscodevicebase.rs  ios.rs  mod.rs  nxos.rs  nxos_network_device.rs  xr.rs  xr_network_device.rs
src/vendors/juniper/: mod.rs  (+2 more)
tests/: test_base_connection.rs  test_cisco_xr.rs  test_logging.rs
tests/common/: mock_device.rs  mod.rs
