[package]
name = "netmiko-rs"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A Rust implementation of Netmiko - SSH connection handler for network devices"

[dependencies]
ssh2 = "0.9.4"
log = "0.4"
env_logger = { version = "0.10", features = ["auto-color", "humantime"] }
async-trait = "0.1.74"
regex = "1.10.2"
chrono = "0.4"
thiserror = "1.0"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lazy_static = "1.4"
parking_lot = "0.12"
rpassword = "7.0"

[dev-dependencies]
mockall = "0.12.1"
tokio-test = "0.4.3"
tokio = { version = "1.34.0", features = ["full"] }
