[workspace]
members = [
    "crates/netssh-core",
    "crates/netssh-python",
    "crates/netssh-api",
    "crates/netssh-textfsm",
]
resolver = "2"

# Configuration that applies to all workspace members
[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A Rust implementation of Netssh - SSH connection handler for network devices"

# Common dependencies for all workspace members
[workspace.dependencies]
# Core dependencies
ssh2 = "0.9.4"
log = "0.4"
env_logger = { version = "0.10", features = ["auto-color", "humantime"] }
async-trait = "0.1.74"
regex = "1.10.2"
chrono = "0.4"
thiserror = "1.0"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lazy_static = "1.4"
parking_lot = "0.12"
rpassword = "7.0"
rand = "0.8"

# Python bindings
pyo3 = { version = "0.19", features = ["extension-module"] }

# Web framework
actix-web = "4.3.1"
actix-rt = "2.8.0"

# Authentication
jsonwebtoken = "8.3.0"
argon2 = "0.5.0"

# API documentation
utoipa = { version = "3.3.0", features = ["actix_extras"] }
utoipa-swagger-ui = { version = "3.1.3", features = ["actix-web"] }

# Connection pooling
bb8 = "0.8.0"

# Enhanced logging
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
tracing-appender = "0.2.2"

# Rate limiting
governor = "0.5.1"

# Testing
mockall = "0.12.1"
tokio-test = "0.4.3"
