[package]
name = "netssh-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Core SSH functionality for netssh-rs - SSH connection handler for network devices"

[dependencies]
# Core dependencies from workspace
ssh2.workspace = true
log.workspace = true
env_logger.workspace = true
async-trait.workspace = true
regex.workspace = true
chrono.workspace = true
thiserror.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
lazy_static.workspace = true
parking_lot.workspace = true
rpassword.workspace = true

[dev-dependencies]
mockall.workspace = true
tokio-test.workspace = true 