[package]
name = "netssh-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Core SSH functionality for netssh-rs - SSH connection handler for network devices"

[dependencies]
# Core dependencies from workspace
ssh2.workspace = true
# Replace log and env_logger with tracing
tracing.workspace = true
tracing-subscriber.workspace = true
# Removing env_logger
async-trait.workspace = true
regex.workspace = true
chrono = { workspace = true, features = ["serde"] }
thiserror.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
lazy_static.workspace = true
parking_lot.workspace = true
rpassword.workspace = true
# Add rand for jitter in backoff algorithm
rand.workspace = true
# TextFSM parsing integration
cmdparser = { path = "../netssh-textfsm" }
indexmap = { version = "2.0", features = ["serde"] }

[features]
default = []
async = ["tokio/full"]

[dev-dependencies]
mockall.workspace = true
tokio-test.workspace = true 