[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "netssh_rs"
version = "0.1.0"
description = "Python bindings for netssh-rs - SSH connection handler for network devices"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Rust",
    "Topic :: System :: Networking",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "textfsm>=1.1.0",
]

[project.urls]
Repository = "https://github.com/yourusername/netssh-rs"

[tool.maturin]
python-source = "python"
include = ["textfsm/**/*"]  # Include textfsm directory and all its contents
features = ["pyo3/extension-module"] 