[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "netssh_rs"
version = "0.1.0"
description = "Python bindings for netssh-rs - SSH connection handler for network devices"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Rust",
    "Topic :: System :: Networking",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: MIT License",
    "Typing :: Typed",
]
dependencies = [
    # No external dependencies required - TextFSM is included in the package
]

[project.urls]
Repository = "https://github.com/yourusername/netssh-rs"

[tool.maturin]
python-source = "python"
module-name = "netssh_rs.netssh_rs"
# Include all necessary files
include = [
    # Include the TextFSM module files and templates
    "python/netssh_rs/textfsm/*.py",
    "python/netssh_rs/textfsm/py.typed",
    "python/netssh_rs/textfsm/templates/**/*",
    # Include the type stubs
    "python/netssh_rs/py.typed",
    "python/netssh_rs/stubs/**/*.pyi"
]
# Include the netssh_rs package
python-packages = ["netssh_rs"]
features = ["pyo3/extension-module"]

[tool.mypy]
python_version = "3.7"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true