[package]
name = "shared-config"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Shared configuration management for netssh-rs workspace"
license = "MIT"

[dependencies]
# Configuration
config.workspace = true
serde.workspace = true
serde_json.workspace = true

# Error handling
thiserror.workspace = true

# Environment variables
dotenvy.workspace = true

# Logging
tracing.workspace = true

# Time handling
chrono.workspace = true

# Path handling
dirs = "5.0"

[dev-dependencies]
tempfile.workspace = true
tokio-test.workspace = true

[[example]]
name = "unified_config_demo"
path = "../../examples/shared-config/unified_config_demo.rs"

[[example]]
name = "cross_crate_integration_demo"
path = "../../examples/shared-config/cross_crate_integration_demo.rs"
